--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,19 @@
-build: false
+build: off
 
 environment:
-    PYTHON: "C:\\Python27"
-    PYTHON_VERSION: "2.7.8"
-    PYTHON_ARCH: "32"
+    PYTHON: "C:\\Python37-x64"
 
     matrix:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          ARCH_BUILD: x86_64
+          ARCH: x86_64
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install conan --upgrade
-  - pip.exe install conan_package_tools bincrafters_package_tools
-  - conan user # It creates the conan data directory
+  - set PATH=%PYTHON%/Scripts;%PYTHON%;%PATH%
+  - pip.exe install --upgrade conan
+  - pip.exe install --upgrade sesame-package-tools conan-package-tools bincrafters-package-tools
+  - conan user
+  - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
 
 test_script:
-  - python build.py
+  - sesame build --windows --upload
